<resources>
    <string name="app_name">Menu Clube</string>
    <string name="modificar">Modificar</string>
    <string name="jogador">Jogador</string>
    <string name="codigo">Código</string>
    <string name="nome">Nome</string>
    <string name="cidade">Cidade</string>
    <string name="id">ID</string>
    <string name="data">Data Nasc.</string>
    <string name="altura">Altura</string>
    <string name="peso">Peso</string>
    <string name="time">Time</string>
    <string name="inserir">Inserir</string>
    <string name="listar">Listar</string>
    <string name="deletar">Deletar</string>
    <string name="pesquisar">Pesquisar</string>
    <string name="adicionar">Adicionar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>