<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TimeFragment">

    <EditText
        android:id="@+id/etCodigoTime"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="26dp"
        android:layout_marginEnd="14dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:hint="@string/codigo"
        android:inputType="numberDecimal"
        android:textColorHint="@color/black"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnPesquisarTime"
        app:layout_constraintEnd_toStartOf="@+id/btnPesquisarTime"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnPesquisarTime"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="152dp"
        android:layout_marginEnd="26dp"
        android:layout_marginBottom="17dp"
        android:text="@string/pesquisar"
        app:layout_constraintBottom_toTopOf="@+id/etNomeTime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/etCodigoTime"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etNomeTime"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="17dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:hint="@string/nome"
        android:inputType="text"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/etCidadeTime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnPesquisarTime" />

    <EditText
        android:id="@+id/etCidadeTime"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="22dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:hint="@string/cidade"
        android:inputType="text"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/btnInserirTime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNomeTime" />

    <Button
        android:id="@+id/btnInserirTime"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="97dp"
        android:layout_marginBottom="19dp"
        android:text="@string/inserir"
        app:layout_constraintBottom_toTopOf="@+id/btnDeletarTime"
        app:layout_constraintEnd_toStartOf="@+id/btnModificarTime"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etCidadeTime" />

    <Button
        android:id="@+id/btnModificarTime"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginEnd="30dp"
        android:text="@string/modificar"
        app:layout_constraintBottom_toBottomOf="@+id/btnInserirTime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnInserirTime"
        app:layout_constraintTop_toTopOf="@+id/btnInserirTime" />

    <Button
        android:id="@+id/btnDeletarTime"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="107dp"
        android:layout_marginBottom="32dp"
        android:text="@string/deletar"
        app:layout_constraintBottom_toTopOf="@+id/tvTimeListar"
        app:layout_constraintEnd_toStartOf="@+id/btnListarTime"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnInserirTime" />

    <Button
        android:id="@+id/btnListarTime"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="27dp"
        android:layout_marginBottom="31dp"
        android:text="@string/listar"
        app:layout_constraintBottom_toTopOf="@+id/tvTimeListar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnDeletarTime"
        app:layout_constraintTop_toBottomOf="@+id/btnModificarTime" />

    <TextView
        android:id="@+id/tvTimeListar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnDeletarTime" />
</androidx.constraintlayout.widget.ConstraintLayout>